--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <h1>Hello World</h1>
-    <h2>When life gives you a hundred reasons to cry, show life a thousand reasons to smile - Unknown Author</h2>
+    <h2>When life gives you a hundred reasons to cry, show life a thousand reasons to smile - Unknown Authors</h2>
 </body>
 </html>
