--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Home - Mariah St. Jeor</title>
+    <meta charset="UTF-8">
+    <title>Home - Mariah St. Jeor</title>
 </head>
 <body>
     <h1>Hello World</h1>
