--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <a href="project3/index.html">Project 3</a>
+    <br>
+    <a href="project4/index.html">Project 4 - Final</a>
 </body>
 </html>
