--- a/project4/blog.html
+++ b/project4/blog.html
@@ -39,9 +39,12 @@
             <h2>Packing Your Hospital Bag</h2>
             <h5>No Stress Packing - Everything you need!, March 25, 2022</h5>
 
-            <div class="blimg"> <img src="imgs/Birth Bag Social Cover.png" alt="hospital bag checklist" style="width:30%"> </src>
+            <div class="blimg"> <img src="imgs/BirthBagSocialCover.png" alt="hospital bag checklist" style="width:30%">
+            </div>
 
             <p>It can bring on a lot of unnecessary stress when it comes time to pack your hospital bags. We make it easy to know what you really need and what can be left at home. Use our free printable packing list!</p>
+        </div>
+        </div>
         </div>
 
         <br>
@@ -51,7 +54,7 @@
         <h2>Coping with DMER (Disphoric Milk Ejection Reflex)</h2>
         <h5>What is DMER and how can we overcome the challenges that it brings?, March 2, 2022</h5>
 
-          <div class="blimg"> <img src="imgs/dmer.png" alt="infograph of dmer" style="width:30%"> </src>
+          <div class="blimg"> <img src="imgs/dmer.png" alt="infograph of dmer" style="width:30%">
 
             <p>DMER affects majority of women, but many women are unaware of what it is and what it means. Being aware of DMER can change your breastfeeding (or pumping) journey. See what you can do if you are affected by DMER.</p>
         </div>
@@ -62,16 +65,16 @@
 
         <h2>Popular Posts</h2>
 
-        <div class="blimg"> <img src="imgs/family1.png" alt="family" style="width:400px"></src>
-
-        <div class="blimg"> <img src="imgs/parenting1.png" alt="infograph of parenting keywords" style="width:400px"></src>
-
-        <div class="blimg"> <img src="imgs/military.png" alt="military spouse appreciation" style="width:400px"></src>
-
+        <div class="blimg"> <img src="imgs/family1.png" alt="family" style="width: 400px"></src>
         </div>
 
+        <div class="blimg"> <img src="imgs/parenting1.png" alt="infograph of parenting keywords" style="width: 400px">
         </div>
-      </div>
+
+        <div class="blimg"> <img src="imgs/military.png" alt="military spouse appreciation" style="width: 400px">
+
+        </div>
+        
 
       <br>
       <br>
