--- a/project4/index.html
+++ b/project4/index.html
@@ -38,16 +38,18 @@
     <h3>About Mommi & E</h3>
 
     <p id="mp">
-        Mommi & E is all about building a place for parent to be vulnerable and learn. When we open up about the truths and challenges that come with being a parent (and an adult) it can help those around us. There are so many opinions out there that tear us down - let's build each other up!
+        Mommi & E is all about building a place for parent to be vulnerable and learn. When we open up about the truths and challenges that come with being a parent (and an adult) it can help those around us. There are so many opinions out there that tear us down - let's build each other up!</p>
+        <br>
+
+        <p>This Site includes:</p>
 
         <ol>
-            <p>This Site includes:</p>
              <li>Educational Blog Posts</li>
             <li>Parent Resources and Guides</li>
             <li>Recipes to Make Parenthood Easier</li>
             <li>More coming soon!</li>
         </ol>
-    </p>
+    
 
     </main>
 
