--- a/project4/recipes.html
+++ b/project4/recipes.html
@@ -69,7 +69,7 @@
         </div>
 
         <div id="bottom2">
-            <a href="https://my.whisk.com/recipes/101ff51134d358d31710ade8eb9d6a606957925441d" width="180px">
+            <a href="https://my.whisk.com/recipes/101ff51134d358d31710ade8eb9d6a606957925441d">
             <img src="imgs/recipes/steak.png" width="180px"></a>
             <p>The Best Steak Dinner</p>
         </div>
