--- a/project4/blog.html
+++ b/project4/blog.html
@@ -65,7 +65,8 @@
 
         <h2>Popular Posts</h2>
 
-        <div class="blimg"> <img src="imgs/family1.png" alt="family" style="width: 400px"></src>
+        <div class="blimg"> <img src="imgs/family1.png" alt="family" style="width: 400px">
+
         </div>
 
         <div class="blimg"> <img src="imgs/parenting1.png" alt="infograph of parenting keywords" style="width: 400px">
