--- a/project4/recipes.html
+++ b/project4/recipes.html
@@ -40,37 +40,37 @@
     <div id="grid">
         <div id="top1">
             <a href="https://my.whisk.com/recipes/101ba0339de78bbf658e54b05f6821061560526a943">
-            <img src="imgs/recipes/potato soup.jpg" width="180px"></a>
+            <img src="imgs/recipes/potatosoup.jpg" width="180" alt="Loaded Potato Soup"></a>
             <p>Loaded Potato Soup</p>
         </div>
 
         <div id="top2">
             <a href="https://my.whisk.com/recipes/10109af67113b66a674dec5c915478ebe78cba43ee2">
-            <img src="imgs/recipes/bread.jpg" width="180px"></a>
+            <img src="imgs/recipes/bread.jpg" width="180" alt=""Oatmeal Banana Bread></a>
             <p>Oatmeal Banana Bread</p>
         </div>
 
         <div id="mid1">
             <a href="https://my.whisk.com/recipes/107c6b2a3f6f89c4691a76d3c6632638faf">
-            <img src="imgs/recipes/chicken.jpg" width="180px"></a>
+            <img src="imgs/recipes/chicken.jpg" width="180" alt="Crockpot Chicken Thighs"></a>
             <p>Crockpot Chicken Thighs</p>
         </div>
 
         <div id="mid2">
             <a href="https://my.whisk.com/recipes/1074ea6215258d24510814117b96e41ed31">
-            <img src="imgs/recipes/oatmeal (2).jpg" width="180px"></a>
+            <img src="imgs/recipes/oatmeal(2).jpg" width="180"></a>
             <p>Blueberry Oatmeal</p>
         </div>
 
         <div id="bottom1">
             <a href="https://my.whisk.com/recipes/1014f69602544d29d78ad9163e5cfc547af1706725c">
-            <img src="imgs/recipes/pasta.jpg" width="180px"></a>
+            <img src="imgs/recipes/pasta.jpg" width="180" alt="Alfredo Pasta"></a>
             <p>Alfredo Pasta</p>
         </div>
 
         <div id="bottom2">
             <a href="https://my.whisk.com/recipes/101ff51134d358d31710ade8eb9d6a606957925441d">
-            <img src="imgs/recipes/steak.png" width="180px"></a>
+            <img src="imgs/recipes/steak.png" width="180" alt="The Best Steak Dinner"></a>
             <p>The Best Steak Dinner</p>
         </div>
         
