--- a/project4/recipes.html
+++ b/project4/recipes.html
@@ -46,7 +46,7 @@
 
         <div id="top2">
             <a href="https://my.whisk.com/recipes/10109af67113b66a674dec5c915478ebe78cba43ee2">
-            <img src="imgs/recipes/bread.jpg" width="180" alt=""Oatmeal Banana Bread></a>
+            <img src="imgs/recipes/bread.jpg" width="180" alt="Oatmeal Banana Bread"></a>
             <p>Oatmeal Banana Bread</p>
         </div>
 
@@ -58,7 +58,7 @@
 
         <div id="mid2">
             <a href="https://my.whisk.com/recipes/1074ea6215258d24510814117b96e41ed31">
-            <img src="imgs/recipes/oatmeal(2).jpg" width="180"></a>
+            <img src="imgs/recipes/oatmeal(2).jpg" width="180" alt="Blueberry Oatmeal"></a>
             <p>Blueberry Oatmeal</p>
         </div>
 
